<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.exercises.javid.myHomework.Start">


    <Button
        android:id="@+id/btn_start_insta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instagram" />

    <Button
        android:id="@+id/btn_start_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sms" />

    <Button
        android:id="@+id/btn_start_cam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cam" />

</LinearLayout>
